added google font

--- a/less/index.less
+++ b/less/index.less
@@ -50,10 +50,24 @@ table {
 
 /* Set every element's box-sizing to border-box */
 * {
-    box-sizing: border-box;
+	box-sizing: border-box;
+	border:1px solid gray;
 }
 
 html, body {
 	height: 100%;
 }
 
+header{
+	display: flex;
+    width: 100%;
+    height: 20vh;
+    background-image: url(../images/ggb.jpg);
+    background-size: 100% 100%;
+}
+
+foooter{
+	display:flex;
+	justify-content: center;
+	background-image: url('../images/bb.jpg');
+}
