--- a/css/index.css
+++ b/css/index.css
@@ -89,6 +89,7 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  border: 1px solid gray;
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -129,21 +130,139 @@ table {
 /* Set every element's box-sizing to border-box */
 * {
   box-sizing: border-box;
-  border: 1px solid gray;
 }
 html,
 body {
-  height: 100%;
+  font-family: 'Barlow', sans-serif;
+  font-size: 62.5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  height: fit-content;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Libre Baskerville', serif;
+}
+/*header with nav bar*/
 header {
   display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  flex-wrap: wrap;
   width: 100%;
   height: 20vh;
   background-image: url(../images/ggb.jpg);
-  background-size: 100% 100%;
+  background-size: contain;
+  font-size: 2rem;
 }
-foooter {
+header nav {
+  width: 60%;
+  height: 5vh;
+  display: flex;
+  justify-content: space-evenly;
+}
+header nav a {
+  text-decoration: none;
+  color: #00b7ff;
+}
+header nav a:hover {
+  color: white;
+  text-transform: uppercase;
+}
+header h1 {
+  width: 100%;
+  height: 10vh;
   display: flex;
   justify-content: center;
+  align-items: center;
+  color: #00b7ff;
+  font-size: 4rem;
+}
+/*at a glance section*/
+.intro {
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: center;
+  height: 60vh;
+  align-items: center;
+}
+.intro div {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.intro div h2 {
+  font-size: 3rem;
+}
+.intro div p {
+  width: 100%;
+  height: 30vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.intro div nav {
+  width: 40%;
+  height: 5vh;
+  display: flex;
+  justify-content: space-evenly;
+}
+.intro div nav a {
+  text-decoration: none;
+  border: 1px solid black;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 27%;
+}
+.intro div nav a:hover {
+  background-color: #00b7ff;
+  color: white;
+  text-transform: uppercase;
+}
+/*footer*/
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
   background-image: url('../images/bb.jpg');
+  height: 20vh;
+  background-size: contain;
+  color: white;
+}
+/*start or about page*/
+/*middle about section*/
+.about {
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: center;
+}
+.about section {
+  width: 90%;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.about section div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.about section .skills {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+}
+.about section .skills li {
+  padding-left: 20%;
 }
