--- a/less/index.less
+++ b/less/index.less
@@ -23,7 +23,7 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
-	border:1px solid gray;
+	//border:1px solid gray;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -57,6 +57,12 @@ table {
 @font-header:'Libre Baskerville', serif;
 @font-body:'Barlow', sans-serif;
 
+.center(){
+	display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 html, body {
 
 	font-family: @font-body;
@@ -71,6 +77,7 @@ html, body {
 h1, h2, h3, h4, h5, h6{
 	font-family: @font-header;
 }
+
 /*header with nav bar*/
 header{
 	display: flex;
@@ -103,9 +110,7 @@ header{
 	h1{
 		width:100%;
 		height:10vh;
-		display:flex;
-		justify-content:center;
-		align-items:center;
+		.center();
 		color:@font-color;
 		font-size:4rem;
 	}
@@ -113,16 +118,14 @@ header{
 /*at a glance section*/
 .intro{
 	font-size: 1.5rem;
-    display: flex;
-    justify-content: center;
+    .center();
     height: 60vh;
-    align-items: center;
 	
 	div{
 		width:80%;
-		display:flex;
+		.center();
 		flex-direction:column;
-		align-items: center;
+		
 
 		h2{
 			font-size:3rem;
@@ -131,9 +134,7 @@ header{
 		p{
 			width: 100%;
 			height: 30vh;
-			display: flex;
-			justify-content: center;
-			align-items: center;
+			.center();
 		}
 
 		nav{
@@ -146,10 +147,12 @@ header{
 				text-decoration:none;
 				border: 1px solid black;
 				border-radius: 5px;
-				display: flex;
-				justify-content: center;
-				align-items: center;
+				.center();
 				width: 27%;
+
+				@media(max-width:630px){
+					width:35% ;
+				}
 
 				&:hover{
 					background-color:@font-color;
@@ -188,9 +191,11 @@ footer{
 		justify-content:space-evenly;
 
 		div{
-			display: flex;
-			justify-content: center;
-			align-items: center;
+			.center();
+
+			p{
+				padding-left: 3%;
+			}
 			
 		}
 
@@ -206,4 +211,12 @@ footer{
 	}
 }
 
-
+/*contact page*/
+address{
+	font-size: 5rem;
+	height: 60vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+}
