--- a/less/index.less
+++ b/less/index.less
@@ -209,6 +209,10 @@ footer{
 
 			p{
 				padding-left: 3%;
+
+				@media(max-width:500px){
+					padding: 3%;
+				}
 			}
 
 			@media(max-width:500px){
